<resources>
    <string name="app_name">itc CALCULATOR</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="clear">C</string>
    <string name="exp">^</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="mod">%</string>
    <string name="plusMinus">^</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="parenthesis">( )</string>

    <string name="backSpace"> </string>

    <string name="display"></string>
</resources>