<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_bias="0.94">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="clearB"
                android:text="@string/clear"
                android:textColor="#E40E0E"
                android:textSize="30sp" />

            <Button
                android:id="@+id/parenthesis"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="parenB"
                android:text="@string/parenthesis"
                android:textColor="#4FD614"
                android:textSize="30sp" />

            <Button
                android:id="@+id/mod"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="modB"
                android:text="@string/mod"
                android:textColor="#4FD614"
                android:textSize="30sp" />

            <Button
                android:id="@+id/div"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="divB"
                android:text="@string/div"
                android:textColor="#4FD614"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sevenB"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eightB"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="nineB"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/mul"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="mulB"
                android:text="@string/mul"
                android:textColor="#4FD614"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fourB"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fiveB"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sixB"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="minusB"
                android:text="@string/minus"
                android:textColor="#4FD614"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="oneB"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="twoB"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="threeB"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="plusB"
                android:text="@string/plus"
                android:textColor="#4FD614"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="plusMinusB"
                android:text="@string/plusMinus"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zeroB"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="pointB"
                android:text="@string/point"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:layout_weight="1"
                android:background="@drawable/circleg"
                android:onClick="equalB"
                android:text="@string/equal"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="false"
        android:inputType="none"
        android:paddingRight="10dp"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/button21"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="backspaceB"
        android:contentDescription="@string/backSpace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back_space" />


</androidx.constraintlayout.widget.ConstraintLayout>